--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -157,8 +157,8 @@
 									</div>
 									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger">
+												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-red-400"></i>
 												<span class="toggle-off blind">좋아요</span>
 												<span class="toggle-on blind">좋아요 해제</span>
 												120
@@ -199,8 +199,8 @@
 											</div>
 											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 												<div class="left">
-													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger">
+														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-red-400"></i>
 														<span class="toggle-off blind">좋아요</span>
 														<span class="toggle-on blind">좋아요 해제</span>
 														120
@@ -241,8 +241,8 @@
 											</div>
 											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 												<div class="left">
-													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger">
+														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-red-400"></i>
 														<span class="toggle-off blind">좋아요</span>
 														<span class="toggle-on blind">좋아요 해제</span>
 														120
@@ -286,8 +286,8 @@
 									</div>
 									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger">
+												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-red-400"></i>
 												<span class="toggle-off blind">좋아요</span>
 												<span class="toggle-on blind">좋아요 해제</span>
 												120
@@ -329,8 +329,8 @@
 									</div>
 									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
 										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
+											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger">
+												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-red-400"></i>
 												<span class="toggle-off blind">좋아요</span>
 												<span class="toggle-on blind">좋아요 해제</span>
 												120
