--- a/html/PBWIV/PBWIV100000.html
+++ b/html/PBWIV/PBWIV100000.html
@@ -179,7 +179,7 @@
 
 
 		<!-- bottom-btn -->
-		<div class="bottom-btn">
+		<div class="bottom-btn" style="display:none;">
 
 			<!-- 재생 전 -->
 			<div class="financial-player">
@@ -207,7 +207,7 @@
 			<!-- 재생 전 -->
 
 			<!-- 재생 후 -->
-			<div class="financial-player is-playing">
+			<!-- <div class="financial-player is-playing">
 				<div class="financial-player-title">
 					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
 					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
@@ -228,11 +228,18 @@
 						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
 					</button>
 				</div>
-			</div>
+			</div> -->
 			<!-- 재생 후 -->
 
 		</div>
 		<!-- //bottom-btn -->
+
+		<div id="layoutBtnDiv" class="bottom-btn" style="display: none;">
+			<div class="btn-wrap">
+				<button id="layoutBtn1" type="button" class="btn-large btn-secondary">ë±ë¡</button>
+				<button id="layoutBtn2" type="button" class="btn-large btn-primary">ê³µì&nbsp;</button>
+			</div>
+		</div>
 
 	</main>
 	<!-- //main -->
