--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -95,7 +95,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-square" aria-label="일정 검색"><i class="ico-search bg-red-500"></i></a>
+						<a href="#" class="fab fab-secondary fab-square" aria-label="일정 검색"><i class="ico-search" style="background-color:#FF8000;"></i></a>
 						<a href="#" class="fab fab-primary fab-square" aria-label="일정 추가"><i class="ico-calendar"></i></a>
 					</div>
 					<!-- //snackbar-content -->
@@ -107,7 +107,7 @@
 						<div class="inp-group gap16 px0">
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-red" id="chk01" checked>
+									<input type="checkbox" class="type-yellow" id="chk01" checked>
 									<span class="label-title">개인 일정</span>
 								</label>
 							</div>
