--- a/html/PBWCH/PBWCH009902_noresult.html
+++ b/html/PBWCH/PBWCH009902_noresult.html
@@ -141,21 +141,21 @@
 							<!-- //tab-content -->
 							<div class="tab-content mt16">
 								<div class="d-flex flex-wrap px16 gap10 bg-transparent">
-									<button class="btn-xsmall btn-primary btn-round" id="error" aria-label="선택됨">KOSPI</button>
-									<button class="btn-xsmall btn-primary btn-round" aria-label="선택됨">KOSDAQ</button>
-									<button class="btn-xsmall btn-outlined btn-round">KOSPI200</button>
-									<button class="btn-xsmall btn-outlined btn-round">S&P500</button>
-									<button class="btn-xsmall btn-outlined btn-round">NASDAQ</button>
-									<button class="btn-xsmall btn-outlined btn-round">DOW</button>
-									<button class="btn-xsmall btn-outlined btn-round">EUROSTOXX50</button>
-									<button class="btn-xsmall btn-outlined btn-round">상해종합</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
-									<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+									<button class="btn-xsmall btn-primary btn-round normal-wrap" id="error" aria-label="선택됨">KOSPI</button>
+									<button class="btn-xsmall btn-primary btn-round normal-wrap" aria-label="선택됨">KOSDAQ</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">KOSPI200</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">S&P500</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">NASDAQ</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">DOW</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">EUROSTOXX50</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">상해종합</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
+									<button class="btn-xsmall btn-outlined btn-round normal-wrap">HSCEI</button>
 								</div>
 							</div>
 
