--- a/html/PBWCH/PBWCH009902_result.html
+++ b/html/PBWCH/PBWCH009902_result.html
@@ -109,16 +109,16 @@
 
 					<ul class="d-flex flex-column gap14 mt16">
 						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap hauto al">코스피배당인컴증권자투자신탁(주식-재간접형)</button>
+							<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피배당인컴증권자투자신탁(주식-재간접형)</button>
 						</li>
 						<li>
-							<button class="btn-xsmall btn-primary btn-round normal-wrap hauto al">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</button>
+							<button class="btn-xsmall btn-primary btn-round normal-wrap">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</button>
 						</li>
 						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap hauto al">신한글로벌코스피탄소중립솔루션증권투자신탁(H)(주식)</button>
+							<button class="btn-xsmall btn-outlined btn-round normal-wrap">신한글로벌코스피탄소중립솔루션증권투자신탁(H)(주식)</button>
 						</li>
 						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap hauto al">코스피</button>
+							<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피</button>
 						</li>
 					</ul>
 
