--- a/html/PBWIV/PBWIV010000_skeletone.html
+++ b/html/PBWIV/PBWIV010000_skeletone.html
@@ -182,7 +182,7 @@
 							</ul>
 						</div>
 
-						<p class="description caution body-small fc-typography-caption mt16">장 시작(8:30~9:30)과 장마감(15:00~16:00)중에는 일부 투자금액이 맞지 않을 수 있습니다.</p>
+						<!-- <p class="description caution body-small fc-typography-caption mt16">장 시작(8:30~9:30)과 장마감(15:00~16:00)중에는 일부 투자금액이 맞지 않을 수 있습니다.</p> -->
 					</div>
 
 
