--- a/html/PBWCH/PBWCH009902_result.html
+++ b/html/PBWCH/PBWCH009902_result.html
@@ -88,56 +88,7 @@
 				<!-- content -->
 				<div class="content">
 
-					<!-- sticky-content -->
-					<div class="sticky-sentinal"></div>
-					<div class="sticky-content content-fluid">
-						<div class="sticky-content-inner">
-							<!-- form -->
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap input-btn">
-									<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
-								</div>
-								<p class="validate-text"></p>
-							</div>
-							<!-- //form -->
-						</div>
-					</div>
-					<!-- //sticky-content -->
 
-					<ul class="d-flex flex-column gap14 mt16">
-						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피배당인컴증권자투자신탁(주식-재간접형)</button>
-						</li>
-						<li>
-							<button class="btn-xsmall btn-primary btn-round normal-wrap">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</button>
-						</li>
-						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap">신한글로벌코스피탄소중립솔루션증권투자신탁(H)(주식)</button>
-						</li>
-						<li>
-							<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피</button>
-						</li>
-					</ul>
-
-
-					<!-- bottom-btn -->
-					<div class="bottom-btn bottom-btn-shadow">
-						<div class="bottom-btn-title">
-							<strong class="title-medium">최대 3개를 비교할 수 있습니다.</strong>
-						</div>
-						<div class="btn-wrap btn-nowrap overflow-list">
-							<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSPI</span><i class="ico-close-16"></i></button>
-							<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSDAQ</span><i class="ico-close-16"></i></button>
-							<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span><i class="ico-close-16"></i></button>
-						</div>
-						<div class="btn-wrap">
-							<button type="button" class="btn-medium btn-primary">비교하기</button>
-						</div>
-					</div>
-					<!-- //bottom-btn -->
 
 				</div>
 				<!-- //content -->
@@ -153,6 +104,79 @@
 
 	</main>
 	<!-- //main -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-search">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">펀드/지수 검색</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<!-- sticky-content -->
+						<div class="sticky-sentinal"></div>
+						<div class="sticky-content content-fluid">
+							<div class="sticky-content-inner">
+								<!-- form -->
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap input-btn">
+										<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+									</div>
+									<p class="validate-text"></p>
+								</div>
+								<!-- //form -->
+							</div>
+						</div>
+						<!-- //sticky-content -->
+						<ul class="d-flex flex-column gap14 mt16">
+							<li>
+								<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피배당인컴증권자투자신탁(주식-재간접형)</button>
+							</li>
+							<li>
+								<button class="btn-xsmall btn-primary btn-round normal-wrap">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</button>
+							</li>
+							<li>
+								<button class="btn-xsmall btn-outlined btn-round normal-wrap">신한글로벌코스피탄소중립솔루션증권투자신탁(H)(주식)</button>
+							</li>
+							<li>
+								<button class="btn-xsmall btn-outlined btn-round normal-wrap">코스피</button>
+							</li>
+						</ul>
+						<!-- bottom-btn -->
+						<div class="bottom-btn bottom-btn-shadow">
+							<div class="bottom-btn-title">
+								<strong class="title-medium">최대 3개를 비교할 수 있습니다.</strong>
+							</div>
+							<div class="btn-wrap btn-nowrap overflow-list">
+								<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSPI</span><i class="ico-close-16"></i></button>
+								<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSDAQ</span><i class="ico-close-16"></i></button>
+								<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span><i class="ico-close-16"></i></button>
+							</div>
+							<div class="btn-wrap">
+								<button type="button" class="btn-medium btn-primary">비교하기</button>
+							</div>
+						</div>
+						<!-- //bottom-btn -->
+
+					</div>
+					<!-- //content -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<script>
+		MicroModal.show('modal-search'); // [1]
+	</script>
+
 
 	<script>
 		$('#error').click(function(event) {
