--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -95,7 +95,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-square" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-primary fab-square" aria-label="일정 검색"><i class="ico-search bg-icon-white"></i></a>
 					</div>
 					<!-- //snackbar-content -->
 
