--- a/html/PBWIV/PBWIV090000_nodata.html
+++ b/html/PBWIV/PBWIV090000_nodata.html
@@ -97,7 +97,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<button type="button" class="fab fab-secondary fab-square" aria-label="뉴스 검색" data-micromodal-trigger="modal-news-search"><i class="ico-search bg-icon-default"></i></button>
+						<button type="button" class="fab fab-primary fab-square" aria-label="뉴스 검색" data-micromodal-trigger="modal-news-search"><i class="ico-search bg-icon-white"></i></button>
 					</div>
 					<!-- //snackbar-content -->
 
