--- a/html/PBWIV/PBWIV090000.html
+++ b/html/PBWIV/PBWIV090000.html
@@ -188,50 +188,66 @@
 
 			<!-- 재생 전 -->
 			<div class="financial-player">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
+				<div class="financial-player-top">
+					<div class="financial-player-title">
+						<button type="button" class="btn-xsmall btn-ghost-white btn-round fc-button-ghostw-onEnabled">
+							<i class="icon-only icon-16 icon-wrap bg-transparent">
+								<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
+								<i class="icon-only icon-16 icon-sound-effect-1 bg-icon-gray_1"></i>
+								<i class="icon-only icon-16 icon-sound-effect-2 bg-icon-gray_1"></i>
+								<i class="icon-only icon-16 icon-sound-effect-3 bg-icon-gray_1"></i>
+							</i>
+							전체듣기
+						</button>
+
+					</div>
+					<div class="financial-player-controller">
+						<button type="button" aria-label="재생">
+							<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="이전">
+							<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="다음">
+							<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
+						</button>
 					</div>
 				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="재생">
-						<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
+				<div class="financial-player-bottom">
+					<p>뉴스제목이 노출됩니다 뉴스제목이 노출됩니다뉴스제목이 노출됩니다</p>
 				</div>
 			</div>
 			<!-- 재생 전 -->
 
 			<!-- 재생 후 -->
 			<div class="financial-player is-playing">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
+				<div class="financial-player-top">
+					<div class="financial-player-title">
+						<button type="button" class="btn-xsmall btn-ghost-white btn-round fc-button-ghostw-onEnabled">
+							<i class="icon-only icon-16 icon-wrap bg-transparent">
+								<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
+								<i class="icon-only icon-16 icon-sound-effect-1 bg-icon-gray_1"></i>
+								<i class="icon-only icon-16 icon-sound-effect-2 bg-icon-gray_1"></i>
+								<i class="icon-only icon-16 icon-sound-effect-3 bg-icon-gray_1"></i>
+							</i>
+							전체듣기
+						</button>
+
+					</div>
+					<div class="financial-player-controller">
+						<button type="button" aria-label="재생">
+							<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="이전">
+							<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="다음">
+							<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
+						</button>
 					</div>
 				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="일시정지">
-						<i class="icon-only icon-24 icon-player-pause bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
+				<div class="financial-player-bottom">
+					<p>뉴스제목이 노출됩니다 뉴스제목이 노출됩니다뉴스제목이 노출됩니다</p>
 				</div>
 			</div>
 			<!-- 재생 후 -->
