--- a/html/PBWIV/PBWIV120000.html
+++ b/html/PBWIV/PBWIV120000.html
@@ -106,76 +106,63 @@
 						<ul class="tab-list tab-col overflow-list" role="tablist">
 							<li class="tab"><a role="tab" href="#">전체</a></li>
 							<li class="tab"><a role="tab" href="#">경제</a></li>
-							<li class="tab"><a role="tab" href="#">세계</a></li>
-							<li class="tab tab-active"><a role="tab" href="#">펀드</a></li>
+							<li class="tab tab-active"><a role="tab" href="#">세계</a></li>
+							<li class="tab"><a role="tab" href="#">펀드</a></li>
 						</ul>
 					</div>
 					<!-- //tab-content -->
 
 					<div class="financial-news">
-						<p class="description info body-small fc-typography-caption mt16">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. <br>
-							펀드는 6개월간의 뉴스를 조회할 수 있습니다.(전체탭에서는 오늘의 펀드뉴스만 조회됩니다.)</p>
+						<p class="description info body-small fc-typography-caption mt16">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. </p>
 
 						<div class="financial-news-list mt16">
 							<ul>
-								<li>
-									<button type="button" data-micromodal-trigger="modal-news-content">
+								<li data-toggle="toggle-wrap">
+									<button type="button" data-micromodal-trigger="modal-news-content" class="financial-news-detail" id="modal-01">
 										<span class="financial-news-title">
 											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
-										<span class="tag-wrap overflow-list">
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-										</span>
+									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
 									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
-											<span class="media"><i class="mediaetc"></i>매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
+											<span class="media"><i class="mediaetc"></i>매체명 없을 경우</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</strong>
 										<span class="date">2024-10-15 14:43</span>
-										<span class="tag-wrap overflow-list">
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-										</span>
+									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
 									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
-											<span class="media"><i class="media01"></i>연합뉴스</span>
+											<span class="media"><i class="media02"></i>매일경제</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
-										<span class="tag-wrap overflow-list">
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-										</span>
+									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
 									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
-											<span class="media"><i class="media01"></i>연합뉴스</span>
+											<span class="media"><i class="media03"></i>한국경제</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
-										<span class="tag-wrap overflow-list">
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-											<span class="tags tags-small tags-surface50">피델리티배당인컴증권</span>
-										</span>
+									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
 									</button>
 								</li>
 							</ul>
@@ -199,53 +186,33 @@
 
 			<!-- 재생 전 -->
 			<div class="financial-player">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
+				<div class="financial-player-top">
+					<div class="financial-player-title">
+						<button type="button" class="btn-xsmall btn-ghost-white btn-round">
+							<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
+							전체듣기
+							<span class="soundwave-container">
+								<span class="bar"></span>
+								<span class="bar"></span>
+								<span class="bar"></span>
+							</span>
+						</button>
+
 					</div>
-				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="재생">
-						<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
+					<div class="financial-player-controller">
+						<button type="button" aria-label="재생">
+							<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="이전">
+							<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="다음">
+							<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 			<!-- 재생 전 -->
-
-			<!-- 재생 후 -->
-			<div class="financial-player is-playing">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-					</div>
-				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="일시정지">
-						<i class="icon-only icon-24 icon-player-pause bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
-				</div>
-			</div>
-			<!-- 재생 후 -->
 
 		</div>
 		<!-- //bottom-btn -->
@@ -332,11 +299,11 @@
 				</div>
 				<div class="modal__content">
 
-					<div class="content">
+					<div class="content" style="padding-bottom:100px;">
 
 						<article class="news-article pt16">
 							<div class="news-article-title">
-								<div class="tags tags-large tags-lightCyan">레이블</div>
+								<div class="tags tags-large tags-green-50">펀드</div>
 								<div class="media">연합뉴스</div>
 							</div>
 							<h2 class="headline-medium">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</h2>
