--- a/html/PBWIV/PBWIV110000.html
+++ b/html/PBWIV/PBWIV110000.html
@@ -117,55 +117,57 @@
 
 						<div class="financial-news-list mt16">
 							<ul>
-								<li>
-									<button type="button" data-micromodal-trigger="modal-news-content">
+								<li data-toggle="toggle-wrap">
+									<button type="button" data-micromodal-trigger="modal-news-content" class="financial-news-detail" id="modal-01">
 										<span class="financial-news-title">
 											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
 									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
+									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
-											<span class="media"><i class="mediaetc"></i>매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
+											<span class="media"><i class="mediaetc"></i>매체명 없을 경우</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</strong>
 										<span class="date">2024-10-15 14:43</span>
 									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
+									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
 											<span class="media"><i class="media02"></i>매일경제</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
 									</button>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
+									</button>
 								</li>
-								<li>
-									<button type="button">
+								<li data-toggle="toggle-wrap">
+									<button type="button" class="financial-news-detail">
 										<span class="financial-news-title">
 											<span class="media"><i class="media03"></i>한국경제</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
 									</button>
-								</li>
-								<li>
-									<button type="button">
-										<span class="financial-news-title">
-											<span class="media"><i class="media04"></i>이데일리</span>
-										</span>
-										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
-										<span class="date">2024-10-15 14:43</span>
+									<button type="button" class="financial-news-control" aria-label="이 뉴스 듣기" data-toggle="toggle-trigger">
+										<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1" data-switch-inner="true" data-switch-inner-before="bg-icon-gray_1" data-switch-inner-after="bg-status-active"></i>
 									</button>
 								</li>
 							</ul>
 						</div>
 					</div>
-
 
 				</div>
 				<!-- //content -->
@@ -183,53 +185,33 @@
 
 			<!-- 재생 전 -->
 			<div class="financial-player">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
+				<div class="financial-player-top">
+					<div class="financial-player-title">
+						<button type="button" class="btn-xsmall btn-ghost-white btn-round">
+							<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
+							전체듣기
+							<span class="soundwave-container">
+								<span class="bar"></span>
+								<span class="bar"></span>
+								<span class="bar"></span>
+							</span>
+						</button>
+
 					</div>
-				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="재생">
-						<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
+					<div class="financial-player-controller">
+						<button type="button" aria-label="재생">
+							<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="이전">
+							<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
+						</button>
+						<button type="button" aria-label="다음">
+							<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 			<!-- 재생 전 -->
-
-			<!-- 재생 후 -->
-			<div class="financial-player is-playing">
-				<div class="financial-player-title">
-					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
-					<strong>금융뉴스<span class="blind">읽어주기</span></strong>
-					<div class="soundwave-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-					</div>
-				</div>
-				<div class="financial-player-controller">
-					<button type="button" aria-label="일시정지">
-						<i class="icon-only icon-24 icon-player-pause bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="이전">
-						<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
-					</button>
-					<button type="button" aria-label="다음">
-						<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
-					</button>
-				</div>
-			</div>
-			<!-- 재생 후 -->
 
 		</div>
 		<!-- //bottom-btn -->
@@ -316,11 +298,11 @@
 				</div>
 				<div class="modal__content">
 
-					<div class="content">
+					<div class="content" style="padding-bottom:100px;">
 
 						<article class="news-article pt16">
 							<div class="news-article-title">
-								<div class="tags tags-large tags-cyan">레이블</div>
+								<div class="tags tags-large tags-lightPurple">세계</div>
 								<div class="media">연합뉴스</div>
 							</div>
 							<h2 class="headline-medium">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</h2>
