--- a/html/PBWIV/PBWIV110000.html
+++ b/html/PBWIV/PBWIV110000.html
@@ -189,7 +189,7 @@
 					<div class="financial-player-title">
 						<button type="button" class="btn-xsmall btn-ghost-white btn-round">
 							<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
-							전체듣기
+							<span class="text">전체듣기</span>
 							<span class="soundwave-container">
 								<span class="bar"></span>
 								<span class="bar"></span>
