--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -110,11 +110,13 @@
 									</picture>
 									<strong class="headline-small">나고객</strong>
 								</div>
-								<div class="tags-wrap">
-									<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
-								</div>
+								<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+
 							</div>
 							<div class="divide-list mt16 px4">
+								<div class="tags-wrap mr10">
+									<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
+								</div>
 								<span>부서명</span>
 								<div class="division h14 mx8"></div>
 								<span>직책</span>
@@ -306,10 +308,10 @@
 					<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 
 					<!-- btn-wrap -->
-					<div class="btn-wrap">
+					<!-- <div class="btn-wrap">
 						<button type="button" class="btn-large btn-outlined">삭제</button>
 						<button type="button" class="btn-large btn-primary">수정</button>
-					</div>
+					</div> -->
 					<!-- //btn-wrap -->
 
 				</div>
@@ -575,6 +577,31 @@
 		</div>
 	</div>
 	<!-- //micromodal -->
+
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-dropdown modal" id="modal-dropdown-list">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header modal__header__alert">
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content">
+					<div class="content content-fluid pb0">
+						<div class="dropdown-option">
+							<ul>
+								<li><button type="button"><i class="ico-reply"></i>수정</button></li>
+								<li><button type="button"><i class="ico-delete"></i>삭제</button></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
 
 
 	<script>
