--- a/html/PBWMA/PBWMA020000_skeletone.html
+++ b/html/PBWMA/PBWMA020000_skeletone.html
@@ -66,7 +66,7 @@
 		<header>
 			<div class="main-header">
 				<div class="left">
-					<button type="button" class="header-logo-btn"><i></i>PB WON</button>
+					<button type="button" class="header-logo-btn" aria-label="PB WON"></button>
 				</div>
 				<div class="center">
 					<h1><span class="blind">투자정보</span></h1>
