--- a/html/PBWCH/PBWCH000000.html
+++ b/html/PBWCH/PBWCH000000.html
@@ -90,7 +90,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-primary fab-square fab-text" data-micromodal-trigger="modal-search"><i class="ico-search bg-icon-white"></i><span>펀드/지수 담기</span></a>
+						<a href="#" class="fab fab-primary fab-square fab-text" data-micromodal-trigger="modal-search"><i class="ico-search bg-icon-white"></i><strong>펀드/지수 담기</strong></a>
 					</div>
 					<!-- //snackbar-content -->
 
