--- a/html/PBWCH/PBWCH000000_scroll.html
+++ b/html/PBWCH/PBWCH000000_scroll.html
@@ -336,7 +336,7 @@
 						</div>
 						<!-- //group-form -->
 
-						<p class="description info body-small fc-typography-caption mt16">주요 지수의 비교 데이터를 제공합니다. <br> 지수는 아래에서 선택해주세요.</p>
+						<p class="description info body-small fc-typography-caption mt16">비교하고 싶은 펀드/지수를 아래에서 선택해 주세요.</p>
 
 
 						<!-- group-form -->
