--- a/html/index.html
+++ b/html/index.html
@@ -1001,6 +1001,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFI050000</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>내용 없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFI050000_nodata</a></td>
+					</tr>
 				</tbody>
 				<tbody data-folder="PBWCA">
 					<tr>
